# ghostwire

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
data/: sample_attack.csv
include/anre/: AttackChain.hpp  AttackChainBuilder.hpp  EventCollector.hpp  EventDatabase.hpp  EventNode.hpp  NarrativeGenerator.hpp  RelationshipEngine.hpp  ReportWriter.hpp  SecurityEvent.hpp  SignatureChecker.hpp  ThreatScoringEngine.hpp  TimelineViewer.hpp
resources/styles/: app.qss
src/: AttackChainBuilder.cpp  EventCollector.cpp  EventDatabase.cpp  NarrativeGenerator.cpp  RelationshipEngine.cpp  ReportWriter.cpp  SignatureChecker.cpp  ThreatScoringEngine.cpp  TimelineViewer.cpp  main.cpp
src/gui/: EventsTablePanel.cpp  EventsTablePanel.hpp  GuiUtil.hpp  IncidentPanel.cpp  IncidentPanel.hpp  MainWindow.cpp  MainWindow.hpp  ProcessGraphPanel.cpp  ProcessGraphPanel.hpp  RiskGauge.cpp  RiskGauge.hpp  TimelinePanel.cpp  TimelinePanel.hpp  WelcomePanel.cpp  WelcomePanel.hpp  main_gui.cpp
test/: stress.cpp
